--- a/package.json
+++ b/package.json
@@ -1,45 +1,17 @@
 {
-  "name": "vite-project",
+  "name": "portifolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "@hookform/resolvers": "^4.1.1",
-    "@radix-ui/react-aspect-ratio": "^1.1.6",
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@tailwindcss/vite": "^4.0.8",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.475.0",
-    "motion": "^12.4.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-router": "^7.6.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.8",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
-  },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "vite": "npm:rolldown-vite@7.2.2"
+  },
+  "overrides": {
+    "vite": "npm:rolldown-vite@7.2.2"
   }
 }
